syntax = "proto3";

package deploy.v1;

import "deploy/v1/messages.proto";

service DeployService {
  rpc GetDeploy(deploy.v1.GetDeployRequest) returns (deploy.v1.GetDeployResponse) {}
  rpc StartDeploy(deploy.v1.StartDeployRequest) returns (deploy.v1.StartDeployResponse) {}
}
