syntax = "proto3";

package jobs.v1;

import "executors/v1/plan/v1/plan_ref.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message StartDeployRequest {
  string deploy_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message StartDeployResponse {
  .executors.v1.plan.v1.PlanRef build_plan = 1;
  .executors.v1.plan.v1.PlanRef image_sync_plan = 2;
  .executors.v1.plan.v1.PlanRef deploy_plan = 3;

  string hostname = 4;
}
