syntax = "proto3";

package instances.v1;

import "component/v1/component.proto";
import "executors/v1/plan/v1/plan_ref.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

// ProvisionRequest represents a workflow input for creating a deployment
message ProvisionRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
  string deployment_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];

  string install_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];

  component.v1.Component component = 6;
  bool plan_only = 7 [(tagger.tags) = "faker:\"-\""];
  .executors.v1.plan.v1.PlanRef build_plan = 8;
}

// ProvisionResponse returns the response from an instance provision workflow
message ProvisionResponse {
  .executors.v1.plan.v1.PlanRef build_plan = 1;
  .executors.v1.plan.v1.PlanRef image_sync_plan = 2;
  .executors.v1.plan.v1.PlanRef deploy_plan = 3;

  string hostname = 4;
}
